tests/machine/x/cpp/str_builtin.mochi.error
line 5: ../../../tests/machine/x/cpp/str_builtin.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/str_builtin.mochi.cpp:5:18: error: ‘str’ was not declared in this scope; did you mean ‘std’?
    5 |         (cout << str(123));
      |                  ^~~
      |                  std

  4 | int main() {
  5 | 	(cout << str(123));
  6 | 	return 0;
