tests/machine/x/cpp/str_builtin.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	(cout << str(123));
	return 0;
}
